some few updates

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,12 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.spatial.transform import Rotation as R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rotation = R.from_euler('z', 3.14/4, degrees=False)\n",
+    "x = np.array([1, 2, 3, 5])\n",
+    "y = np.array([4, 5, 3, 7])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R1 = rotation.as_matrix()\n",
+    "A = rotation.apply(np.vstack((x, y, x*0)).T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.11991246e+00,  3.53637826e+00,  0.00000000e+00],\n",
+       "       [-2.11934937e+00,  4.95059171e+00,  0.00000000e+00],\n",
+       "       [ 1.68926419e-03,  4.24264035e+00,  0.00000000e+00],\n",
+       "       [-1.41083492e+00,  8.48584379e+00,  0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4, 0],\n",
+       "       [2, 5, 0],\n",
+       "       [3, 3, 0],\n",
+       "       [5, 7, 0]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((x, y, x*0)).T"
    ]
   },
   {
